[package]
name = "keys-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for the keys server"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
atty = "0.2"
